--- a/core/themes/claro/css/components/system-status-report.pcss.css
+++ b/core/themes/claro/css/components/system-status-report.pcss.css
@@ -87,6 +87,25 @@
   background-image: url(../../images/core/e29700/warning.svg);
 }
 
+@media (forced-colors: active) {
+  .system-status-report__status-title .details-title:before,
+  .details .system-status-report__status-icon:before {
+    background-color: canvastext;
+    background-image: none;
+    mask-repeat: no-repeat;
+    mask-position: top center;
+    mask-size: contain;
+  }
+  .system-status-report__status-icon--error .details-title:before,
+  .details .system-status-report__status-icon--error:before {
+    mask-image: url(../../images/core/e32700/error.svg);
+  }
+  .system-status-report__status-icon--warning .details-title:before,
+  .details .system-status-report__status-icon--warning:before {
+    mask-image: url(../../images/core/e29700/warning.svg);
+  }
+}
+
 .system-status-report__entry__value {
   box-sizing: border-box;
   padding: 0 1em 1em 3em; /* LTR */
